# proving-ground

./: .gitmodules  README.md  main.py  pyproject.toml
dev_blog/: hugo.toml
dev_blog/content/posts/: hello-world.md
dev_blog/public/: 404.html  index.html  index.xml
dev_blog/public/categories/: index.html  index.xml
dev_blog/public/tags/: index.html  index.xml
proving_blog/: hugo.toml
proving_blog/content/about/: _index.md
proving_blog/content/posts/: my-first-post.md
proving_blog/themes/provingTheme/assets/css/: main.css
proving_blog/themes/provingTheme/layouts/_default/: baseof.html  home.html  single.html
proving_blog/themes/provingTheme/layouts/partials/: card.html  highlight.html  status.html
